# OpenMPHomeTask2

OpenMPTest/: CMakeLists.txt  description  description~  helpers.cpp  helpers.h  main.cpp  parallel_for.cpp  parallel_handle.cpp  parallel_sections.cpp  parallel_v1.cpp  parallel_v2.cpp  parallel_v3.cpp  sequence.cpp
